# hyperframe

./: .coveragerc  .gitignore  .gitmodules  .travis.yml  CHANGELOG.rst  CONTRIBUTORS.rst  HISTORY.rst  MANIFEST.in  Makefile  README.rst  pyproject.toml  setup.cfg  setup.py  test_requirements.txt  tox.ini
.github/workflows/: ci.yml
bench/: flags.py  parse_frame.py  serialize_frame.py  system.py  test_flags.py  test_parse.py  test_serialize.py
bench/utils/: __init__.py  factories.py  seed
docs/: Makefile  make.bat
docs/source/: api.rst  conf.py  index.rst
hyperframe/: __init__.py  exceptions.py  flags.py  frame.py
src/hyperframe/: __init__.py  exceptions.py  flags.py  frame.py
test/: test_flags.py  test_frames.py  test_hyperframe.py
tests/: test_flags.py  test_frames.py
