[metadata]
name = hyperframe
author = Cory Benfield
author_email = cory@lukasa.co.uk
license = MIT License
description = HTTP/2 framing layer for Python
url = https://github.com/python-hyper/hyperframe/
long_description = file: README.rst
long_description_content_type = text/x-rst
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: Implementation :: CPython
    Programming Language :: Python :: Implementation :: PyPy

[options]
package_dir =
    = src
packages = find:
include_package_data = True
python_requires = >=3.6.1

[options.packages.find]
where = src

[options.package_data]
filez = CHANGELOG.rst
hyperframe = py.typed

[tool:pytest]
testpaths = test

[coverage:run]
branch = True
source = hyperframe

[coverage:report]
fail_under = 100
show_missing = True
exclude_lines =
    pragma: no cover
    raise NotImplementedError()

[coverage:paths]
source =
    src
    .tox/*/site-packages

[flake8]
max-line-length = 120

[check-manifest]
ignore =
    Makefile
    test/http2-frame-test-case
